# adobe_hackathon_1a_1b

./: .gitattributes  CMakeLists.txt  Dockerfile  Dockerfile.base
config/: model_config.json
input/: .gitkeep
models/llama-3-gguf/: .gitkeep
output/: file01.json  file02.json
src/: main.cpp  outline_extractor.cpp  outline_extractor.h  task1a.cpp  task1a.h  task1b.cpp  task1b.h
src/utils/: file_utils.cpp  file_utils.h  json_utils.cpp  json_utils.h  logger.cpp  logger.h
